Updates to visual appearance of app.

--- a/README
+++ b/README
@@ -6,8 +6,9 @@ This is a screen emulator. It may be useful for web developers who need to test 
 
 Where:
 ------
-You can visit http://emitche.github.io/screenemulator to use this tool.
+The tool can be found at http://emitche.github.io/screenemulator.
 
 Info:
 -----
-This is the first version of this application. It includes basic functionality.
+This app is currently being built. 
+
