Cleaned up files for 2.2. release.

--- a/README
+++ b/README
@@ -10,5 +10,5 @@ The tool can be found at http://emitche.github.io/screenemulator.
 
 Info:
 -----
-This app is currently being built. 
+This app is currently under development.
 
