--- a/README
+++ b/README
@@ -14,15 +14,13 @@ This app is currently under development.
 
 Notes:
 ------
-The 2.x version of the app includes 3 responsive tools:
-  1) Specifying height and width
-  2) Resizeable iframe utilizing jQuery UI (similar to changing the physical size of your browser by dragging the side)
-  3) Mobile, tablet, and desktop views to-scale (at least when viewed on a laptop/desktop)
+The app includes 3 responsive tools:
+  1) Resizeable iframe utilizing jQuery UI (similar to changing the physical size of your browser by dragging the side)
+  2) Mobile, tablet, and desktop views to-scale (when viewed on a laptop/desktop)
+  3) Specify height and width
+
+This app uses iframes. Some sites do not support displaying their site in an iframe for security reasons. 
   
-The most recent version, 3.x, removes the resizeable frame, as that feature was not compatible with touch experiences and to make the app lighter in weight by removing the jQuery UI dependency. 
-
-I am also considering resizing the mobile, tablet, and desktop views so that they fit inside whatever browser they are being viewed from (phone, tablet, laptop, etc.) This is a feature under consideration and development.
-
 Author:
 -------
 Elizabeth Mitchell
